kubernetes/backend.yaml
# # apiVersion: apps/v1
# # kind: Deployment
# # metadata:
# #   name: backend-deployment
# #   namespace: wanderlust
# # spec:
# #   replicas: 1
# #   selector:
# #     matchLabels:
# #       app: backend
# #   template:
# #     metadata:
# #       labels:
# #         app: backend
# #     spec:
# #       containers:
# #         - name: backend
# #           image: zeeshanshaikh799/backend:latest
# #           imagePullPolicy: Always
# #           ports:
# #             - containerPort: 8080

# # ---
# # apiVersion: v1
# # kind: Service
# # metadata:
# #   name: backend-service
# #   namespace: wanderlust
# # spec:
# #   type: LoadBalancer
# #   selector:
# #     app: backend
# #   ports:
# #     - port: 8080
# #       targetPort: 8080


# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: backend-deployment
#   namespace: wanderlust
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: backend
#   template:
#     metadata:
#       labels:
#         app: backend
#     spec:
#       containers:
#         - name: backend
#           image: zeeshanshaikh799/wanderlust-backend:v1.0
#           imagePullPolicy: Always
#           ports:
#             - containerPort: 8080
#           envFrom:
#             - configMapRef:
#                 name: backend-config
#             - secretRef:
#                 name: backend-secret
# ---
# # apiVersion: v1
# # kind: Service
# # metadata:
# #   name: backend-service
# #   namespace: wanderlust
# # spec:
# #   type: LoadBalancer
# #   selector:
# #     app: backend
# #   ports:
# #     - port: 8080
# #       targetPort: 8080
# #       protocol: TCP


# apiVersion: v1
# kind: Service
# metadata:
#   name: backend-service
#   namespace: wanderlust
# spec:
#   type: ClusterIP
#   selector:
#     app: backend
#   ports:
#     - port: 8080
#       targetPort: 8080




apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: wanderlust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image:  zeeshanshaikh799/wanderlust-backend:v1.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: wanderlust
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
